# BtrGS

./: BtrHGS - Function - collection [Not meant for execution]  BtrHGS_backend.py  BtrHGS_daemon.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Offload-on-integrated.py  README.md  README.txt  Switching.py  To fix:.md  fun-installer.sh  question  sketch  to-remember  workflow
Developmental-deployments/: README.md
Documentation/: README.md
Documentation/sketches/: Basic-switch-sketch  app-freeze.md  mem-trans.md
Old/src/: fun-ui
PoC/: CMakeLists.txt  README.md  README.txt
PoC/include/: gpu_redirector.h
PoC/src/: gpu_redirector.cpp  main.cpp
PoC/test/: test.py
Testers/: BtrHGS_frontend.py
User-deployments/: README.md
hotswap-test-results/: nvidia_hotplug_discoveries_and_scripts
hotswap-test-results/functions-used/: reload.fish  remove1.fish  remove2.fish  removeall.fish  unbind1.fish  unbind2.fish  unbindall.fish
ifs(tes)/: BtrHGS - Function - collection [Not meant for execution]  Disp-out-on-integrated.py  Hybrid-auto.py  Offload-on-integrated.py  POI-test.py  Switching.py  poi-test-launch
indev/: README.md
indev/Basic-graphics-test/: README.md
indev/KERNEL_DEV/: README.md
indev/OpenGL testing/: README.md
release 0.1.Dev/: release 0.1.Dev.tar.xz
release 0.1.Dev/files/: BtrHGS_command.sh  Release notes.md  config.py  installer  installer.py
src/: README  fun-daemon-script  fun-openrc-daemon
src/Fun 2.0/: README  btrfun-backend
testing-tools/: README.md
testing-tools/optimus-control/: BtrHGS_backend.py  README.md
(+10 files in other folders)
